--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/foodstagram?characterEncoding=
 spring.datasource.username=root
 spring.datasource.password=1212
 
+server.port=80
