--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/foodstagram?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=csedbadmin
+spring.datasource.password=1212
 
 server.port=80
 
