--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/foodstagram?characterEncoding=
 spring.datasource.username=root
 spring.datasource.password=1212
 
+#Port number
 server.port=80
 
+#File upload size
 spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
+
+#utf-8
+server.servlet.encoding.charset=utf-8
